# sofiev_plumerise

./: .gitignore  CMakeLists.txt  README.md  input_profile.txt  plumerise_sofiev_mod.F90  pyproject.toml  tune_sofiev.py
.github/workflows/: ci.yml
notebooks/: run_fire_emission_model.ipynb  tune_sofiev.ipynb
src/fortran/: CMakeLists.txt  plumerise_sofiev_mod.F90  sofiev_driver.F90
src/sofiev_model/: biomass_burning_emission.py  cffwi.py  fortran_exporter.py  gfs_ingestor.py  satellite_ingestor.py  sofiev_tuner.py  ufscat_fire_generator.py
src/sofiev_plume_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_biomass_burning_emission.py  test_fortran_exporter.py  test_gfs_ingestor.py  test_satellite_ingestor.py  test_sofiev_tuner.py  test_ufscat_fire_generator.py
