[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sofiev_plume_model"
version = "0.1.0"
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "xgboost",
    "scikit-learn",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
